--- a/src/sass/partials/_cart.scss
+++ b/src/sass/partials/_cart.scss
@@ -10,6 +10,11 @@
   font-size: $base-size;
   box-shadow: 0 0 $base-size rgba(0, 0, 0, 0.2);
   z-index: 9999;
+  display: none;
+
+  &.exist {
+    display: block;
+  }
 
   &.active {
     .cart__content {
@@ -73,7 +78,8 @@
 
   }
 
-  &__product { // CODE CHANGED
+  &__product {
+    // CODE CHANGED
     width: 170px; // CODE CHANGED
   }
 
@@ -149,7 +155,8 @@
     border-top: 1px solid lighten($color-dark, 70%);
     padding: $base-size 0 0 0;
 
-    input, button {
+    input,
+    button {
       width: 100%;
       margin-bottom: ($base-size / 2);
     }
